2007-04-30  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Refactor to be more GObject-like.

2007-04-30  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata.[ch]:
	* libjuicer/sj-metadata-musicbrainz.c:
	Refactor to be more GObject-like.

2007-04-26  Christian Persch  <chpe@gnome.org>

	* libjuicer/sj-metadata-musicbrainz.c:
	(sj_metadata_musicbrainz_finalize): Chain up to parent's finalise
	handler. Bug #433137.

2007-04-11  Bastien Nocera  <hadess@hadess.net>

	* src/sj-play.c: (setup): Follow the preferred sound device as
	set in the control-center (Closes: #428677)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Ross Burton <ross@burtonini.com>

	* libjuicer/sj-util.c: (xdg_user_dir_lookup),
	(sj_get_default_music_directory), (sj_add_default_dirs):
	* libjuicer/sj-util.h:
	* src/sj-main.c: (baseuri_changed_cb), (main):
	* src/sj-prefs.c: (baseuri_changed_cb), (on_edit_preferences_cb):
	* src/sound-juicer.h: Use xdg-user-dirs to set a nice default target
	for encoded files, also add the directory to the list of directories
	listed in the drop-down menu (Closes: #404542)

2007-03-26  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-play.c:
	* libjuicer/sj-extractor.[ch]:
	Use gst_element_make_from_uri for finding a CDDA source (thanks
	James Livingstone, #313089).

2007-03-26  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Display a better message after CD extraction (thanks Adam
	Petaccia, #346067).

2007-03-26  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Detect albums from FreeDB better (thanks David Mandelberg, #353181).

2007-03-26  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Tweak so the path selector combo is accessible (Rich Burridge,
	#406000).

2007-03-26  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't crash if the device exists but nautilus-burn does not know
	about it (Pascal Terjan, #389044).
