@@ -1,3 +1,9 @@
+2007-05-13  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-metadata-musicbrainz.c:
+	Attempt to repair brain-dead FreeDB encoding (#169591, thanks
+	Ka-Hing Cheung).
+
 2007-04-30  Ross Burton  <ross@burtonini.com>
 
 	* libjuicer/sj-extractor.c:
